🐛 Fix webrings not wrapping on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,6 +30,7 @@
   text-align: left;
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
   gap: 15px;
 }
 
